--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -5,8 +6,6 @@
   <artifactId>booksDB</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <title>booksDB Maven Webapp</title>
-  <url>http://maven.apache.org</url>
 
 
   <properties>
